RESOLVED FIXED300339
REGRESSION(300848@main): DumpRenderTree crashing during warmup
https://bugs.webkit.org/show_bug.cgi?id=300339
Summary REGRESSION(300848@main): DumpRenderTree crashing during warmup
Sam Sneddon [:gsnedders]
Reported 2025-10-07 13:18:32 PDT
After 300848@main, we get from run-webkit-tests -1: 12:29:12.488 39807 Warming up the runner ... 12:29:16.184 39807 Test file:///warmup-does-not-exist crashed, we will now gather a crash log. Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 WebKitLegacy 0x10845bc84 -[WebBackForwardList addItem:] + 32 1 DumpRenderTree 0x1042267d0 TestRunner::clearBackForwardList() + 108 2 DumpRenderTree 0x1041d2718 runTest(std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char>> const&) + 3880 3 DumpRenderTree 0x1041d11b8 dumpRenderTree(int, char const**) + 3528 4 DumpRenderTree 0x1041d2df0 DumpRenderTreeMain(int, char const**) + 440 5 dyld 0x197eb5d54 start + 7184
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-07 13:18:39 PDT
Jonathan Bedard
Comment 2 2025-10-07 14:03:43 PDT
Do you have any more information about the configuration this is on? CI doesn't seem to have seen this, at least naively: https://build.webkit.org/#/builders/1235/builds/5202
Sam Sneddon [:gsnedders]
Comment 3 2025-10-07 14:54:31 PDT
(In reply to Jonathan Bedard from comment #2) > Do you have any more information about the configuration this is on? CI > doesn't seem to have seen this, at least naively: > https://build.webkit.org/#/builders/1235/builds/5202 It does appear on CI: 12:31:16.844 52323 Warming up the runner ... 12:31:23.218 52323 Test file:///warmup-does-not-exist crashed, we will now gather a crash log.
Brady Eidson
Comment 4 2025-10-08 11:38:39 PDT
Sam Sneddon [:gsnedders]
Comment 5 2025-10-08 13:06:13 PDT
(In reply to Sam Sneddon [:gsnedders] from comment #3) > (In reply to Jonathan Bedard from comment #2) > > Do you have any more information about the configuration this is on? CI > > doesn't seem to have seen this, at least naively: > > https://build.webkit.org/#/builders/1235/builds/5202 > > It does appear on CI: > > 12:31:16.844 52323 Warming up the runner ... > 12:31:23.218 52323 Test file:///warmup-does-not-exist crashed, we will now > gather a crash log. To be explicit, that logging is from https://build.webkit.org/#/builders/1235/builds/5202#bb-step-13 and then following the Full Logs link under the "layout-test" step to https://s3-us-west-2.amazonaws.com/archives.webkit.org/mac-sequoia-x86_64%20arm64-release-layout-test/301152@main-5202-wk1.txt
EWS
Comment 6 2025-10-08 13:50:24 PDT
Committed 301224@main (2b04e877be40): <https://commits.webkit.org/301224@main> Reviewed commits have been landed. Closing PR #52020 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.