REGRESSION(300848@main): DumpRenderTree crashing during warmup rdar://162141245 https://bugs.webkit.org/show_bug.cgi?id=300339

Reviewed by Basuke Suzuki.

WebBackForwardLists can be empty and have no `currentItem`
In that case, the test was basically doing an `addItem:nil` which has never worked.
If there is no current item, nothing else needs to be done to clear the list.

* Tools/DumpRenderTree/mac/TestRunnerMac.mm:
(TestRunner::clearBackForwardList):
(resetWebViewToConsistentState):

Canonical link: https://commits.webkit.org/301224@main